<resources>
    <string name="app_name">TodoApp</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_in">Sign In</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="signup">SignUp</string>
    <string name="success">Success!</string>
    <string name="password">Confirm password</string>
    <string name="email">Enter your email</string>
</resources>